# Traverse

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: supply-chain.yml
crates/traverse-cli/: Cargo.toml
crates/traverse-cli/src/: http_api.rs  main.rs  supply_chain.rs
crates/traverse-contracts/src/: lib.rs  violations.rs
crates/traverse-mcp/src/: lib.rs
crates/traverse-registry/: Cargo.toml
crates/traverse-registry/src/: application_manifest.rs  events.rs  lib.rs  (+2 more)
docs/: app-consumable-acceptance.md  app-consumable-entry-path.md  browser-adapter.md  compatibility-policy.md  downstream-app-mvp-conformance.md  v0.3.0-public-surface-compatibility.md  v0.3.0-source-build-consumer-packaging.md  youaskm3-canonical-app-http-path.md  youaskm3-canonical-mcp-client-path.md  youaskm3-compatibility-conformance-suite.md  youaskm3-integration-validation.md
docs/releases/: v0.3.0.md  v0.6.0.md
scripts/ci/: contractual_enforcement_gate.sh  downstream_app_bundle_registration_smoke.sh  downstream_app_mvp_conformance.sh  downstream_http_json_smoke.sh  downstream_mcp_smoke.sh  downstream_model_dependency_smoke.sh  downstream_wasm_workflow_smoke.sh  openapi_structural_validation.sh  project_state_audit.sh  repository_checks.sh  rust_checks.sh  spec_context_check.sh  supply_chain_check.sh  youaskm3_compatibility_conformance.sh
specs/: README.md
specs/033-http-json-api/: context.md  openapi.yaml  spec.md
specs/034-programmatic-registration/: context.md  spec.md
specs/035-multi-agent-isolation/: context.md  spec.md
specs/governance/: approved-specs.json
(+11 files in other folders)
