[package]
name = "traverse-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
traverse-contracts = { path = "../traverse-contracts" }
traverse-registry = { path = "../traverse-registry" }
traverse-runtime = { path = "../traverse-runtime" }

[lints]
workspace = true
